--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE = mongodb+srv://expbilal:qOhzpuiPwo1K2rLm@cluster0.7hkzagz.mongodb.net/?retryWrites=true&w=majority
+DATABASE = mongodb+srv://expbilal:idKFwIvBt5I5Ph0L@gojango.3hxl2s2.mongodb.net/?retryWrites=true&w=majority
 
 PORT = 3000
 
