orders | locations updated

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DATABASE = mongodb+srv://expbilal:idKFwIvBt5I5Ph0L@gojango.3hxl2s2.mongodb.net/?
 PORT = 3000
 
 VERSION = 0.0.2
+
+GOOGLE_CLIENT_ID = 866749866420-tat1r2jmv3a8im2le7juesbk3urpjf61.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
