--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.1.5",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.15",
     "passport": "^0.6.0",
