--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cloudinary": "^1.32.0",
@@ -26,7 +27,6 @@
     "moment": "^2.29.4",
     "mongoose": "^6.1.5",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.15",
     "passport": "^0.6.0",
