--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1483.0",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
@@ -28,6 +29,7 @@
     "mongoose": "^6.1.5",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.15",
     "passport": "^0.6.0",
